feat(api): add org/project title and cluster name
