# ts/api/v1/rbac_manager_service.pb.ts
@@ -39,15 +39,18 @@ export type User = {
 
 export type Organization = {
   id?: string
+  title?: string
 }
 
 export type ProjectAssignedKubernetesEnv = {
   clusterId?: string
+  clusterName?: string
   namespace?: string
 }
 
 export type Project = {
   id?: string
+  title?: string
   assignedKubernetesEnvs?: ProjectAssignedKubernetesEnv[]
 }
 
